--- a/src/assets/toolkit/styles/partials/_modules.scss
+++ b/src/assets/toolkit/styles/partials/_modules.scss
@@ -508,7 +508,10 @@
 		}
 	}
 	.profile-block-slim {
-		margin: 0 0.5em;
+		margin: 1em;
+		@include breakpoint(minphablet) {
+			margin: 0.5em;
+		}
 	}
 	.module-boxed {
 		border-bottom: none;
